# CDCZip

./: .gitignore  CMakeLists.txt  README.md  cdcz_test.cpp  cdcz_test.hpp  cdczip.cpp  cdczip_decompress.hpp  dedup_proj.cpp  hamming_codes.py
Datasets/: readme.txt
Datasets/LNX/: lnx.lst
Datasets/LNX-IMG/: lnx-img.lst
Datasets/Real/: README  lnx.lst
cdc_algos/: cdcz.cpp  cdcz.hpp  cdcz_serial.cpp  cdcz_serial.hpp  cdcz_simd.cpp  cdcz_simd.hpp  gear.hpp
contrib/: bit_helper.cpp  bit_helper.h  bitstream.h  task_pool.cpp  task_pool.h
contrib/boost/: config.hpp  cstdint.hpp  limits.hpp  static_assert.hpp  throw_exception.hpp
contrib/boost/config/: abi_prefix.hpp  assert_cxx03.hpp  assert_cxx11.hpp  assert_cxx14.hpp  assert_cxx17.hpp  assert_cxx20.hpp  assert_cxx98.hpp  auto_link.hpp  header_deprecated.hpp  requires_threads.hpp
contrib/boost/config/compiler/: clang.hpp  comeau.hpp  compaq_cxx.hpp  cray.hpp  greenhills.hpp  hp_acc.hpp  intel.hpp  kai.hpp  pgi.hpp  sgi_mipspro.hpp
contrib/boost/config/detail/: select_compiler_config.hpp  select_platform_config.hpp  select_stdlib_config.hpp
contrib/boost/config/platform/: aix.hpp  beos.hpp  bsd.hpp  cray.hpp  cygwin.hpp  haiku.hpp  hpux.hpp  irix.hpp  linux.hpp  macos.hpp  qnxnto.hpp  solaris.hpp  symbian.hpp  vxworks.hpp  wasm.hpp
contrib/boost/config/stdlib/: dinkumware.hpp  libcomo.hpp  modena.hpp  msl.hpp  roguewave.hpp  sgi.hpp
contrib/boost/type_traits/: add_lvalue_reference.hpp  add_reference.hpp  add_rvalue_reference.hpp  declval.hpp  intrinsics.hpp  is_abstract.hpp  is_array.hpp  is_class.hpp  is_complete.hpp  is_convertible.hpp  is_function.hpp  is_lvalue_reference.hpp  is_pod.hpp  is_polymorphic.hpp  is_reference.hpp  is_rvalue_reference.hpp  is_same.hpp  is_union.hpp  is_volatile.hpp  remove_cv.hpp  remove_reference.hpp
contrib/boost/type_traits/detail/: is_function_cxx_03.hpp  is_function_cxx_11.hpp  is_function_ptr_tester.hpp  is_mem_fun_pointer_impl.hpp  is_mem_fun_pointer_tester.hpp  is_member_function_pointer_cxx_03.hpp
contrib/boost/uuid/detail/: sha1.hpp
contrib/embeddings.cpp/: CMakeLists.txt
contrib/embeddings.cpp/examples/: main.cpp  test_batch_encode.cpp  test_tokenizer.cpp
contrib/embeddings.cpp/include_win/: unistd.h
contrib/faiss/cmake/: FindMKL.cmake
contrib/ssdeep/: fuzzy.c  fuzzy.h
delta_compression/: delta.hpp  encoding.cpp  encoding.hpp  simhash.cpp  simhash.hpp
utils/: chunks.cpp  chunks.hpp  circular_buffer.hpp  circular_vector.hpp  console_utils.cpp  console_utils.hpp  io_utils.cpp  io_utils.hpp  lz.hpp  prefix_suffix_count.cpp  prefix_suffix_count.hpp
